[gd_scene load_steps=51 format=2]

[ext_resource path="res://assets/World/Scenes/Ambient3.png" type="Texture" id=1]
[ext_resource path="res://src/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/World/Scenes/Mountains2.png" type="Texture" id=3]
[ext_resource path="res://src/Overlap/BackgroundCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Sound/WorldMusic.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/World/Scenes/Ambient3_background.png" type="Texture" id=6]
[ext_resource path="res://assets/Sound and Music/Songs/strangecorporation.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/Sound and Music/Effects/Concrete 1.wav" type="AudioStream" id=8]
[ext_resource path="res://src/UI/Days.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Items/Items.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/Items/World4/Box.png" type="Texture" id=11]
[ext_resource path="res://assets/Items/World4/Tomb.png" type="Texture" id=12]
[ext_resource path="res://assets/Items/World4/Flower.png" type="Texture" id=13]
[ext_resource path="res://assets/Items/World4/Grass.png" type="Texture" id=14]
[ext_resource path="res://assets/Items/World4/House3.png" type="Texture" id=15]
[ext_resource path="res://assets/Items/World4/blood.png" type="Texture" id=16]
[ext_resource path="res://assets/Items/World4/Shell.png" type="Texture" id=17]
[ext_resource path="res://assets/Items/World4/electric.png" type="Texture" id=18]
[ext_resource path="res://assets/Items/World3/Paper.png" type="Texture" id=19]
[ext_resource path="res://assets/Items/World4/help.png" type="Texture" id=20]
[ext_resource path="res://assets/Items/World4/Poster.png" type="Texture" id=21]
[ext_resource path="res://assets/Items/World4/House2.png" type="Texture" id=22]
[ext_resource path="res://assets/Shadows/MediumShadow.png" type="Texture" id=23]
[ext_resource path="res://src/UI/Pause Menu.tscn" type="PackedScene" id=24]
[ext_resource path="res://src/World/World_Final.gd" type="Script" id=25]
[ext_resource path="res://src/World/ShakeCamera.gd" type="Script" id=26]
[ext_resource path="res://src/Overlap/Dialog_hurtbox.tscn" type="PackedScene" id=27]
[ext_resource path="res://addons/dialogs/Resources/Tomb.tres" type="Resource" id=28]
[ext_resource path="res://src/UI/Key_move.tscn" type="PackedScene" id=29]
[ext_resource path="res://src/Overlap/Hurtbox.tscn" type="PackedScene" id=30]
[ext_resource path="res://src/Items/Tomb.gd" type="Script" id=31]
[ext_resource path="res://addons/dialogs/Resources/Wolrd4.tres" type="Resource" id=32]
[ext_resource path="res://assets/Sound and Music/Final/zapsplat_sound_design_lfe_rumble_landslide_earthquake_etc_21081.wav" type="AudioStream" id=33]
[ext_resource path="res://assets/Sound and Music/Final/bottlerocket_Impact_Boom_Distorted_07.wav" type="AudioStream" id=34]
[ext_resource path="res://assets/Sound and Music/Songs/spaceship1.ogg" type="AudioStream" id=35]
[ext_resource path="res://addons/dialogs/Resources/Final.tres" type="Resource" id=36]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 26.031 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.06219
height = 34.994

[sub_resource type="CircleShape2D" id=13]
radius = 30.229

[sub_resource type="CapsuleShape2D" id=4]
radius = 12.3743
height = 27.5981

[sub_resource type="CapsuleShape2D" id=5]
radius = 11.2525
height = 28.021

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 12.0972, 4.10591 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8.29574, 18.5958 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2.42143, 6.2178 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 13.4252, 89.4837 )

[sub_resource type="CapsuleShape2D" id=10]
radius = 11.6863
height = 43.8782

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 11.9529, 30.7015 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 10, 35.6883 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 15.5098, 29.5078 )

[node name="World4" type="Node2D"]
script = ExtResource( 25 )
label_position = Vector2( 180, 120 )
dialog_resource = ExtResource( 28 )
dialog_resource_final = ExtResource( 36 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 9, 160.5 )

[node name="AnimationTree" parent="YSort/Player" index="2"]
parameters/playback = SubResource( 1 )

[node name="Hurtbox" parent="YSort/Player" index="5"]
collision_layer = 0

[node name="Walking_sound" parent="YSort/Player" index="7"]
stream = ExtResource( 8 )

[node name="Items" type="YSort" parent="YSort"]

[node name="Item" parent="YSort/Items" instance=ExtResource( 10 )]
position = Vector2( 280.086, 121.623 )
z_index = 0

[node name="Sprite" parent="YSort/Items/Item" index="0"]
texture = ExtResource( 11 )

[node name="CollisionShape2D" parent="YSort/Items/Item" index="1"]
position = Vector2( 9.5, 0.5 )
shape = SubResource( 2 )

[node name="Item2" parent="YSort/Items" instance=ExtResource( 10 )]
position = Vector2( 290.058, 154.438 )
z_index = 0
script = ExtResource( 31 )

[node name="Sprite" parent="YSort/Items/Item2" index="0"]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" parent="YSort/Items/Item2" index="1"]
position = Vector2( -0.5, 6 )
shape = SubResource( 3 )

[node name="Hurtbox" parent="YSort/Items/Item2" instance=ExtResource( 30 )]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="YSort/Items/Item2/Hurtbox" index="0"]
position = Vector2( -2, 1 )
shape = SubResource( 13 )

[node name="Item3" parent="YSort/Items" instance=ExtResource( 10 )]
position = Vector2( 199.67, 118.289 )
z_index = 0

[node name="Sprite" parent="YSort/Items/Item3" index="0"]
position = Vector2( 0, -6 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 15 )

[node name="CollisionShape2D" parent="YSort/Items/Item3" index="1"]
position = Vector2( 2.83163, 1.07904 )
shape = SubResource( 4 )

[node name="Grass" type="YSort" parent="YSort/Items"]

[node name="Grass" type="Sprite" parent="YSort/Items/Grass"]
position = Vector2( 53.638, 138.853 )
texture = ExtResource( 14 )

[node name="Grass5" type="Sprite" parent="YSort/Items/Grass"]
position = Vector2( 137.638, 127.853 )
texture = ExtResource( 14 )
hframes = 3

[node name="Grass2" type="Sprite" parent="YSort/Items/Grass"]
position = Vector2( 78.5974, 162.088 )
texture = ExtResource( 14 )
hframes = 2
frame = 1

[node name="Grass6" type="Sprite" parent="YSort/Items/Grass"]
position = Vector2( 141.597, 158.088 )
texture = ExtResource( 14 )

[node name="Grass3" type="Sprite" parent="YSort/Items/Grass"]
position = Vector2( 209.925, 126.169 )
texture = ExtResource( 14 )
hframes = 2

[node name="Grass4" type="Sprite" parent="YSort/Items/Grass"]
position = Vector2( 203.752, 164.333 )
texture = ExtResource( 14 )
hframes = 3
frame = 2

[node name="Flower" type="Sprite" parent="YSort/Items/Grass"]
position = Vector2( 303.267, 168.19 )
texture = ExtResource( 13 )
hframes = 3
frame = 1

[node name="Flower3" type="Sprite" parent="YSort/Items/Grass"]
position = Vector2( 276.267, 168.19 )
texture = ExtResource( 13 )
hframes = 3

[node name="Flower2" type="Sprite" parent="YSort/Items/Grass"]
position = Vector2( 302.267, 138.19 )
texture = ExtResource( 13 )
hframes = 3

[node name="Flower4" type="Sprite" parent="YSort/Items/Grass"]
position = Vector2( 276.267, 141.19 )
texture = ExtResource( 13 )
hframes = 3
frame = 1

[node name="Item4" parent="YSort/Items" instance=ExtResource( 10 )]
position = Vector2( 39.9594, 110.875 )
z_index = 0

[node name="Sprite" parent="YSort/Items/Item4" index="0"]
position = Vector2( 0, -10 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 22 )

[node name="CollisionShape2D" parent="YSort/Items/Item4" index="1"]
position = Vector2( 2.247, 2.5 )
shape = SubResource( 5 )

[node name="blood" type="Sprite" parent="YSort/Items"]
position = Vector2( 141.907, 136.635 )
z_index = -1
texture = ExtResource( 16 )
hframes = 2

[node name="help" type="Sprite" parent="YSort/Items"]
position = Vector2( 149.903, 148.941 )
texture = ExtResource( 20 )

[node name="electric" type="StaticBody2D" parent="YSort/Items"]
position = Vector2( 157.975, 123.63 )
collision_mask = 2147483648

[node name="Sprite" type="Sprite" parent="YSort/Items/electric"]
position = Vector2( 0, -3 )
texture = ExtResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Items/electric"]
position = Vector2( 3.397, 0.2 )
shape = SubResource( 6 )

[node name="Poster" type="StaticBody2D" parent="YSort/Items"]
position = Vector2( 103.028, 101.806 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="YSort/Items/Poster"]
position = Vector2( 3, 23 )
z_index = -1
texture = ExtResource( 23 )

[node name="Sprite2" type="Sprite" parent="YSort/Items/Poster"]
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Items/Poster"]
position = Vector2( 2.52268, 7.14763 )
shape = SubResource( 7 )

[node name="Paper" type="Sprite" parent="YSort/Items"]
position = Vector2( 127.799, 116.523 )
texture = ExtResource( 19 )

[node name="Shell" type="StaticBody2D" parent="YSort/Items"]
position = Vector2( 81.4843, 117.654 )
collision_mask = 0

[node name="Sprite" type="Sprite" parent="YSort/Items/Shell"]
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Items/Shell"]
position = Vector2( 2.52554, 0.841843 )
shape = SubResource( 8 )

[node name="Background" type="YSort" parent="YSort"]

[node name="Sprite" type="Sprite" parent="YSort/Background"]
position = Vector2( 155.985, 101.613 )
scale = Vector2( 0.745743, 0.778997 )
z_index = -1
texture = ExtResource( 1 )

[node name="Ambient2_background" type="Sprite" parent="YSort/Background"]
position = Vector2( 176.153, 56.4806 )
scale = Vector2( 0.662215, 0.679791 )
z_index = -3
texture = ExtResource( 6 )

[node name="Sprite3" type="Sprite" parent="YSort/Background"]
position = Vector2( 164.799, 49.4827 )
scale = Vector2( 3.20657, 3.20657 )
z_index = -2
texture = ExtResource( 3 )

[node name="Colissions Background" type="Node" parent="."]

[node name="BackgroundCollision" parent="Colissions Background" instance=ExtResource( 4 )]
position = Vector2( 182.639, 77.1252 )

[node name="CollisionShape2D" parent="Colissions Background/BackgroundCollision" index="0"]
position = Vector2( -4.56134, -17.43 )

[node name="BackgroundCollision7" parent="Colissions Background" instance=ExtResource( 4 )]
position = Vector2( 182.639, 77.1252 )

[node name="CollisionShape2D" parent="Colissions Background/BackgroundCollision7" index="0"]
position = Vector2( -195.763, 112.208 )
shape = SubResource( 9 )

[node name="BackgroundCollision9" parent="Colissions Background" instance=ExtResource( 4 )]
position = Vector2( 182.639, 77.1252 )

[node name="CollisionShape2D" parent="Colissions Background/BackgroundCollision9" index="0"]
position = Vector2( 150.719, 99.0908 )
shape = SubResource( 9 )

[node name="BackgroundCollision6" parent="Colissions Background" instance=ExtResource( 4 )]
position = Vector2( 182.639, 77.1252 )

[node name="CollisionShape2D" parent="Colissions Background/BackgroundCollision6" index="0"]
position = Vector2( -15.749, 156.302 )

[node name="BackgroundCollision4" parent="Colissions Background" instance=ExtResource( 4 )]
position = Vector2( 184.865, 84.2937 )

[node name="CollisionShape2D" parent="Colissions Background/BackgroundCollision4" index="0"]
position = Vector2( 30.1007, 16.0412 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="BackgroundCollision5" parent="Colissions Background" instance=ExtResource( 4 )]
position = Vector2( 118.938, 82.512 )

[node name="CollisionShape2D" parent="Colissions Background/BackgroundCollision5" index="0"]
position = Vector2( 42.0631, 21.5311 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="BackgroundCollision10" parent="Colissions Background" instance=ExtResource( 4 )]
position = Vector2( 118.938, 82.512 )

[node name="CollisionShape2D" parent="Colissions Background/BackgroundCollision10" index="0"]
position = Vector2( 46.4469, 5.64265 )
shape = SubResource( 10 )

[node name="BackgroundCollision8" parent="Colissions Background" instance=ExtResource( 4 )]
position = Vector2( 118.938, 82.512 )

[node name="CollisionShape2D" parent="Colissions Background/BackgroundCollision8" index="0"]
position = Vector2( 136.2, 20.3873 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="BackgroundCollision3" parent="Colissions Background" instance=ExtResource( 4 )]
position = Vector2( 184.865, 84.2937 )

[node name="CollisionShape2D" parent="Colissions Background/BackgroundCollision3" index="0"]
position = Vector2( -130.075, 9.13278 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="BackgroundCollision2" parent="Colissions Background" instance=ExtResource( 4 )]
visible = false
position = Vector2( 184.865, 84.2937 )

[node name="CollisionShape2D" parent="Colissions Background/BackgroundCollision2" index="0"]
position = Vector2( -73.609, 15.7884 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="WorldMusic" parent="." instance=ExtResource( 5 )]
stream = ExtResource( 7 )
autoplay = true

[node name="Days" parent="." instance=ExtResource( 9 )]
margin_left = -5.699
margin_top = 8.982
margin_right = -5.699
margin_bottom = 8.982

[node name="Label2" parent="Days" index="1"]
margin_left = 15.9603
margin_right = 79.9602
text = "17"

[node name="Pause Menu" parent="." instance=ExtResource( 24 )]

[node name="ShakeCamera" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 0.9, 0.9 )
process_mode = 0
limit_left = 0
limit_top = 0
limit_right = 320
limit_bottom = 180
script = ExtResource( 26 )
target = NodePath("../YSort/Player")

[node name="Key__move" parent="." instance=ExtResource( 29 )]
margin_left = 263.0
margin_top = 129.0
margin_right = 263.0
margin_bottom = 129.0

[node name="AnimatedSprite" parent="Key__move" index="0"]
visible = false
frame = 1

[node name="AnimatedSprite2" parent="Key__move" index="1"]
frame = 1

[node name="ScreenTime" parent="Key__move" index="2"]
wait_time = 6.0

[node name="Label" parent="Key__move" index="4"]
visible = false

[node name="Dialog_hurtbox2" parent="." instance=ExtResource( 27 )]
position = Vector2( 57.1367, 150.777 )
label_position = Vector2( 140, 120 )
dialog_resource = ExtResource( 32 )

[node name="CollisionShape2D" parent="Dialog_hurtbox2" index="0"]
shape = SubResource( 14 )

[node name="Shake_time" type="Timer" parent="."]
wait_time = 0.9

[node name="Time_event" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Start_event" type="Timer" parent="."]
one_shot = true

[node name="Explosion_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 34 )
volume_db = -9.0

[node name="Tremor_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 33 )
volume_db = -6.0

[node name="Final_hurtbox" parent="." instance=ExtResource( 30 )]
position = Vector2( 201.983, 152.202 )
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" parent="Final_hurtbox" index="0"]
shape = SubResource( 15 )

[node name="Final_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 35 )
volume_db = -4.0
[connection signal="area_entered" from="YSort/Items/Item2/Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="YSort/Items/Item2/Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="timeout" from="Shake_time" to="." method="_on_Shake_time_timeout"]
[connection signal="timeout" from="Time_event" to="." method="_on_Time_event_timeout"]
[connection signal="timeout" from="Start_event" to="." method="_on_Start_event_timeout"]
[connection signal="area_entered" from="Final_hurtbox" to="." method="_on_Final_hurtbox_area_entered"]

[editable path="YSort/Player"]

[editable path="YSort/Items/Item"]

[editable path="YSort/Items/Item2"]

[editable path="YSort/Items/Item2/Hurtbox"]

[editable path="YSort/Items/Item3"]

[editable path="YSort/Items/Item4"]

[editable path="Colissions Background/BackgroundCollision"]

[editable path="Colissions Background/BackgroundCollision7"]

[editable path="Colissions Background/BackgroundCollision9"]

[editable path="Colissions Background/BackgroundCollision6"]

[editable path="Colissions Background/BackgroundCollision4"]

[editable path="Colissions Background/BackgroundCollision5"]

[editable path="Colissions Background/BackgroundCollision10"]

[editable path="Colissions Background/BackgroundCollision8"]

[editable path="Colissions Background/BackgroundCollision3"]

[editable path="Colissions Background/BackgroundCollision2"]

[editable path="Days"]

[editable path="Key__move"]

[editable path="Dialog_hurtbox2"]

[editable path="Final_hurtbox"]
